--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -91,7 +91,7 @@ body {
   
   html {
     scrollbar-width: thin;
-    scrollbar-color: hsl(var(--primary)) transparent;
+    scrollbar-color: black white;
   }
 
   ::-webkit-scrollbar {
@@ -99,15 +99,15 @@ body {
   }
 
   ::-webkit-scrollbar-track {
-    background: transparent;
+    background: white;
   }
 
   ::-webkit-scrollbar-thumb {
-    background-color: hsl(var(--primary) / 0.5);
+    background-color: black;
     border-radius: 4px;
   }
 
   ::-webkit-scrollbar-thumb:hover {
-    background-color: hsl(var(--primary));
+    background-color: #333;
   }
 }
